Update 命令行运行jar.md